# lacus

./: .gitignore  CMakeLists.txt  README.md
doc/: dev_doc.md
ext/: README.md
ext/a_star/: a_star.hpp
ext/bevtree/: brain_tree.h
ext/braintree/: brain_tree.h  sample_1.cpp
ext/magic_enum/: magic_enum.h
ext/meta/: meta.hpp
ext/tinyxml2/: tinyxml2.cpp  tinyxml2.h
res/: system.json
src/: main.cpp
src/bevtree/: bevtree.cpp  bevtree.h
src/engine/: application.cpp  application.h  audio.cpp  audio.h  audio_player.cpp  audio_player.h  camera.cpp  camera.h  color.cpp  color.h  config.cpp  config.h  engine_wrapper.h  event.cpp  event.h  font.cpp  font.h  geometry.cpp  geometry.h  misc.cpp  misc.h  plugin.cpp  plugin.h  render.cpp  render.h  resource.cpp  resource.h  scene.cpp  scene.h  text_render.cpp  text_render.h  texture.cpp  texture.h  utility.cpp  widget.cpp  widget.h  window.cpp  window.h  wrapper.h
src/game/: game.cpp  game.h  game_logic.cpp  game_logic.h
src/imform/: im_form.cpp  im_form.h  im_form_demo.cpp  im_form_demo.h  im_manager.cpp  im_manager.h  imform.cpp  imform.h  imform_demo.cpp  imform_demo.h  imform_manager.cpp  imform_manager.h  imgui_plugin.h  imgui_plugin_main.h
src/samples/: sample_camera.h  sample_plugin_astar.cpp  sample_plugin_astar.h  sample_plugin_audio.cpp  sample_plugin_audio.h  sample_plugin_bevtree.cpp  sample_plugin_bevtree.h  sample_plugin_draw.cpp  sample_plugin_draw.h  sample_plugin_entt.cpp  sample_plugin_entt.h  sample_plugin_imgui.h  sample_plugin_main.h  sample_plugin_manager.cpp  sample_plugin_manager.h  sample_plugin_scene.cpp  sample_plugin_scene.h  sample_plugin_tilemap.cpp  sample_plugin_tilemap.h  sample_plugin_tweeny.cpp  sample_plugin_tweeny.h
src/tilemap/: map_layer.cpp  map_layer.h  map_tilset.cpp  map_tilset.h  map_utils.h  tile_map.cpp  tile_map.h
src/tmxmap/: TmxLayer.cpp  TmxLayer.h  TmxMap.cpp  TmxMap.h  TmxMapDemo.cpp  TmxMapDemo.h  TmxTexture.cpp  TmxTexture.h  tmx_layer.cpp  tmx_layer.h  tmx_map_loader.cpp  tmx_map_loader.h
src/ui/: buttons.cpp  buttons.h  form.cpp  form.h  form_demo.cpp  form_demo.h  groups.cpp  groups.h  gui_manager.cpp  gui_manager.h  ui.h  ui_utils.cpp  ui_utils.h  widget.cpp  widget.h
src/utility/: dynamic_struct.h  dynamic_var.h  expire_cache.h  i_singleton.h  md5.cpp  md5.h  quicklz.c  (+6 more)
vsproject/: lacus.sln  lacus.vcxproj  lacus.vcxproj.filters
(+480 files in other folders)
